--- a/index.html
+++ b/index.html
@@ -162,5 +162,16 @@
             document.querySelector('.fade-in').classList.remove('fade-in');
         }, 2000); // Adjust the delay as needed
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LP47NM0ZEJ');
+</script>
+    
 </body>
 </html>
