--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
       <meta http-equiv="Cache-Control" content="max-age=3600, public, stale-while-revalidate=604800">
       <title>TAHAD - Malaysia Event Management</title>
-      <meta name="description" content="Experience limitless events with Tahad, Malaysia's leading event organizers. Our passionate team delivers diverse and unforgettable experiences.">
+      <meta name="description" content="Loading screen for TAHAD the leading event management company in malaysia">
       <link rel="canonical" href="https://www.tahad.co/" />
       <link rel="icon" href="images/favicon.ico" type="image/x-icon">
       <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -112,7 +112,7 @@
 <body>
     <!-- Logo container -->
     <div class="logo">
-        <a href = "#.html"><img src="images/logo.png" alt="Your Logo" width="100"></a>
+        <a href = "main.html"><img src="images/logo.png" alt="Your Logo" width="100"></a>
     </div>
 
     <div class="fade-in flip-card">
@@ -162,16 +162,5 @@
             document.querySelector('.fade-in').classList.remove('fade-in');
         }, 2000); // Adjust the delay as needed
     </script>
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LP47NM0ZEJ');
-</script>
-    
 </body>
 </html>
