--- a/pages/faq.html
+++ b/pages/faq.html
@@ -57,10 +57,10 @@
     </div>
 	
 	  <button class="accordion">
-       What are advantages of taking NMN <span class="icon"></span>
+       Booking And Reservation <span class="icon"></span>
     </button>
     <div class="panel">
-      <br> <p>Here are Advantages of taking NMN:</p>
+      <br> <p>Booking and reservation must be made atleast 3 month before the event to ensure we can prepare for you the planning, material and place.</p>
       <ul>
         <li>1.  Increased NAD+ Levels: NMN is a precursor to NAD+, and taking NMN supplements is thought to boost NAD+ levels in the body. NAD+ plays a crucial role in various cellular processes, including energy production and DNA repair.</li>
         <li>2.  Anti-Aging: NMN is often linked to anti-aging benefits. By increasing NAD+ levels, NMN may help counteract some effects of aging, such as declining energy levels and cellular damage.</li>
