--- a/pages/faq.html
+++ b/pages/faq.html
@@ -57,22 +57,24 @@
     </div>
 	
 	  <button class="accordion">
-       Booking And Reservation <span class="icon"></span>
+       How our service works ? <span class="icon"></span>
     </button>
     <div class="panel">
-      <br> <p>Booking and reservation must be made atleast 3 month before the event to ensure we can prepare for you the planning, material and place.</p>
       <ul>
-        <li>1.  Increased NAD+ Levels: NMN is a precursor to NAD+, and taking NMN supplements is thought to boost NAD+ levels in the body. NAD+ plays a crucial role in various cellular processes, including energy production and DNA repair.</li>
-        <li>2.  Anti-Aging: NMN is often linked to anti-aging benefits. By increasing NAD+ levels, NMN may help counteract some effects of aging, such as declining energy levels and cellular damage.</li>
-		<li>3.  Improved Energy: Enhanced NAD+ levels may lead to increased energy production within cells, potentially resulting in improved stamina and vitality.</li>
-		<li>4.  Cognitive Health: Some studies suggest that NMN could support brain health and cognitive function, potentially improving memory and cognitive abilities.</a></li>
-		<li>5.  Cardiovascular Health: NMN might promote cardiovascular health by improving blood vessel function, reducing oxidative stress, and supporting healthy blood lipid profiles.</li>
-		<li>6.  Metabolic Health: NMN could assist in regulating glucose metabolism and insulin sensitivity, potentially benefiting those with metabolic disorders or at risk of type 2 diabetes.</li>
-		<li>7.  DNA Repair: NMN may play a role in DNA repair processes, essential for maintaining genetic stability and preventing mutations that could lead to diseases.</li>
-		<li>8.  Muscle Health: Preliminary research indicates that NMN supplementation might enhance muscle endurance and strength, appealing to athletes and those seeking improved physical performance.</li>
-		<li>9.  Sirtuin Activation: NMN is believed to activate sirtuins, proteins associated with longevity and cellular repair processes.</li>
-		<li>10. Anti-Inflammatory Properties: NMN may possess anti-inflammatory effects, which could be advantageous for individuals with chronic inflammatory conditions.</li>
+        <li>1.  <b>Consultation</b> <br><br> Once you have book for an appointment, you will be introduced to a dedicated Event Planner who will assist you throughout the event.</li>
+        <li>2.  <b>Venue</b> <br><br> We will work with you and your team to find the perfect venue for the event.</li>
+		<li>3.  <b>Design</b> <br><br> We will provide set-up ideas according to the event theme, venue size, timeline and budget. Floor plan, event materials design and overall concept will be discussed at this stage.</li>
+		<li>4.  <b>Preparation</b> <br><br> Once the proposal is approved, we will then proceed to bring it to live!</li>
+		<li>5.  <b>Actual Day</b> <br><br> We will take care of every details, so that you can relax and enjoy.</li>
       </ul>
+    </div>
+
+    <button class="accordion">
+       Area that we cover ? <span class="icon"></span>
+    </button>
+    <div class="panel">
+      <br> <p>We have collaborated with companies across Malaysia, mainly in Kuala Lumpur, Selangor, Puchong, Subang Jaya, Shah Alam, Johor Bahru and Penang.<br><br>To find out more, feel free to contact us directly. </p>
+      <br>
     </div>
 	
 	
