--- a/pages/policies.html
+++ b/pages/policies.html
@@ -38,51 +38,29 @@
   <div class="default-content">
     <h3>PRIVACY POLICY</h3>
 	 <p>
-<b>Your Privacy</b><br><br>
-Ellenur SDN. BHD. is totally committed to protecting
-the privacy of our site visitors and customers. The Ellenur SDN. BHD. team members are customers themselves of other Internet sites and fully
-appreciate and respect the importance of privacy on the Internet. We will not disclose information
-about our customers to third parties except where it is part of providing a service to you - e.g.
-arranging for a product to be sent to you, carrying out credit and other security checks and for the
-purposes of customer research and profiling or where we have your express permission to do so.<br><br>
 
-<b>Your Consent</b> <br><br>
-We will not sell your name, address, e-mail address, credit card information or personal information
-to any third party (excluding partners from whom you may have linked to our site) without your
-permission.<br><br>
+At Tahad Production (JM1000247-W), we are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy outlines how we collect, use, disclose, and protect the information you provide to us when using our website and services. By accessing or using our website, you agree to the terms of this Privacy Policy.<br><br><br>
 
-<b>Communication & Marketing</b><br><br>
-If you have made a purchase from our store we may occasionally update you on our latest products,
-news and special offers via members’ portal, e-mail, post & telephone. You will also be given the
-opportunity to receive such communications from us and selected third parties when you become a
-member of Ellenur SDN. BHD.
-All Ellenur SDN. BHD. members have the option to
-opt-out of receiving marketing communications from us and/or selected third parties.<br><br>
+<b>Information We Collect</b><br><br><br>
+<b>Personal Information: </b>We may collect personal information such as your name, email address, phone number, and other relevant details when you interact with our website, fill out forms, or communicate with us.<br><br><b>Usage Information: </b>We may collect non-personal information such as your IP address, browser type, operating system, and browsing behavior on our website through the use of cookies and similar technologies.<br><br><br>
 
-<b>Site Statistics</b><br><br>
-We may disclose aggregate, anonymised statistics about the number of visitors to this Website or
-number of purchases made as required by our investors. We use an independent measurement and
-research company to gather data regarding the visitors to this Website on our behalf using cookies
-and code which is embedded in the site. Both the cookies and the embedded code provide statistical
-information about visits to pages on the site, the duration of individual page view, paths taken by
-visitors through the site, data on visitors' screen settings and other general information.
-ellenur.com uses and stores this type of information, as with that obtained from other
-cookies used on the site, to help it improve the services to its users. Further information regarding
-the way in which this information is obtained and used can be obtained by contacting us.<br><br>
+<b>Information Sharing</b><br><br><br>
+We do not sell, trade, or rent your personal information to third parties.<br><br>We may share your information with trusted third-party service providers who assist us in operating our website and providing our services. These third parties are required to maintain the confidentiality of your information.<br><br><br>
 
-<b>Third Party Sites</b><br><br>
-Our site may contain links to and from the websites of our partner networks, advertisers and other
-third parties. If you follow a link to any of these websites, please note that they have their own
-privacy policies and that we do not accept any responsibility or liability for these policies. Please
-check these policies before you submit any personal data to these websites.<br><br>
+<b>Data Security</b><br><br><br>
+We implement reasonable security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.<br><br><br>
 
-<b>Contacting Us</b><br><br>
-We are always pleased to hear from our customers (even if it is a complaint!). We are always grateful
-for any time you spend providing us with the knowledge we need to ensure our customers are
-completely satisfied - we want you to return to the site and to recommend us to your friends and
-family. If you have any questions or feedback about this statement, or if you would like us to stop
-processing your information, please do not hesitate to contact a member of the Ellenur
- SDN. BHD. team, who will be delighted to answer any questions you may have. <br><br>
+<b>Third-Party Links</b><br><br><br>
+Our website may contain links to third-party websites or services. We are not responsible for the privacy practices or content of these third parties. We encourage you to review the privacy policies of these websites.<br><br><br>
+
+<b>Children's Privacy</b><br><br><br>
+Our website and services are not directed to individuals under the age of 18. We do not knowingly collect personal information from children. If you are a parent or guardian and believe that your child has provided us with personal information, please contact us, and we will take steps to remove such information.<br><br><br>
+
+<b>Changes to This Privacy Policy</b><br><br><br>
+We reserve the right to update or modify this Privacy Policy at any time. Any changes will be effective immediately upon posting on our website. We encourage you to review this Privacy Policy periodically for any updates.<br><br><br>
+
+<b>Terms of Service</b><br><br><br>
+If you have aContact Usny questions or concerns about our Privacy Policy or the handling of your personal information, please contact us.
 
   </p>
   </div>
