--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -36,56 +36,49 @@
  
 <section id="tnc" class="section">
   <div class="default-content">
-    <h3>Term And Conditions</h3>
-	 <p>
- Welcome to ELLENUR SDN. BHD. sites.
-Terms and conditions stated below applies to all visitors. You are
-bound by these terms and conditions. <br><br>
+    <h3>Terms and Conditions</h3>
+   <p>
 
-<b>General</b> <br><br>
-The content of terms and conditions may be change, move, or delete at any time. Please note that
-Ellenur SDN.BHD. have the rights to change the contents of the terms and conditions without any
-notice. Any violation of rules and regulations of these terms and conditions, visitor will
-take immediate actions against the offender(s).<br><br>
+Welcome to Tahad Production (JM1000247-W)! These Terms and Conditions govern your use of our website and services. By accessing or using our website, you agree to comply with and be bound by the following terms and conditions. Please read these terms carefully before using our website or services.<br><br><br>
 
-<b>Site Contents & Copyrights</b><br><br>
-Unless otherwise noted, all materials, including images, illustrations, designs, icons, photographs,
-video clips, and written and other materials that appear as part of this Site, in other words “Contents
-of the Site” are copyrights, trademarks, trade dress and/or other intellectual properties owned,
-controlled, or licensed by ELLENUR SDN. BHD.<br><br>
+<b>Acceptance of Terms</b><br><br><br>
+By using our website or services, you agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use our website or services.<br><br><br>
 
-<b>Comments and Feedbacks</b><br><br>
-All comments and feedbacks to ELLENUR SDN. BHD.
-will be remain support@ellenur.com.
-User shall agree that there will be no comment(s) submitted to the visitor will violate
-any rights of any third party, including copyrights, trademarks, privacy of other personal or
-proprietary right(s). Furthermore, the user shall agree there will not be content of unlawful, abusive,
-or obscene material(s) submitted to the site. User will be the only one responsible for any comment's
-content made.<br><br>
+<b>Use of Website</b><br><br><br>
+You agree to use our website for lawful purposes and in a manner that does not violate any applicable laws or regulations.<br><br><br>
 
-<b>Product Information</b><br><br>
-We cannot guarantee all actual products will be the same shown on the monitor as that is depending
-on the user monitor.<br><br>
+<b>Intellectual Property</b><br><br><br>
+All content on our website, including but not limited to text, graphics, logos, images, and software, is the property of Tahad Production (JM1000247-W) or its licensors and is protected by copyright, trademark, and other intellectual property laws. You may not use, reproduce, or distribute any content from our website without our prior written consent.<br><br><br>
 
-<b>Link to other sites</b><br><br>
-Any access link to third party sites is at your own. Ellenur SDN. BHD. will not be related or involve
-to any such website if the user's content/product(s) got damaged or loss have any connection with
-third party site.<br><br>
+<b>Services</b><br><br><br>
+We offer event management services as described on our website. By using our services, you agree to abide by any additional terms and conditions specific to those services.<br><br><br>
 
-<b>Inaccuracy Information</b><br><br>
-From time to time, there may be information on ellenur.com that contains typographical
-error, inaccuracies, omissions, that may relate to product description, pricing, availability, and article
-contents. We reserve the rights to correct any errors, inaccuracies, change or edit information
-without prior notice to the customers. If you are not satisfied with your purchased product(s), please
-return it back to us with the invoice.<br><br>
+<b>Payment</b><br><br><br>
+Payment for our services is subject to the terms and conditions outlined in our agreements and invoices. You agree to pay all fees and charges associated with the services in a timely manner.<br><br><br>
 
-<b>Refund Policy</b><br><br>
-Your full refund will be issued once we have received and examined the returned goods at our return
-center.<br><br>
+<b>Cancellation and Refunds</b><br><br><br>
+Cancellation and refund policies for our services are outlined in our agreements and invoices. Please review these terms carefully before engaging our services.<br><br><br>
 
-<b>Shipping and Delivery Policy</b><br><br>
-Items in stock: 2-5 working days for Standard Delivery items.
-Items that are out of stock: Please email or call us for assistance.<br><br>
+<b>Disclaimer of Warranties</b><br><br><br>
+Our website and services are provided on an "as is" and "as available" basis without any warranties of any kind, either express or implied. We do not warrant that our website will be uninterrupted or error-free, or that any defects will be corrected.<br><br><br>
+
+<b>Limitation of Liability</b><br><br><br>
+In no event shall Tahad Production (JM1000247-W) be liable for any indirect, incidental, special, consequential, or punitive damages, including but not limited to lost profits, arising out of or in connection with your use of our website or services.<br><br><br>
+
+<b>Indemnification</b><br><br><br>
+You agree to indemnify and hold harmless Tahad Production (JM1000247-W), its affiliates, officers, directors, employees, and agents from any claims, damages, liabilities, costs, or expenses arising out of your use of our website or services or your violation of these Terms and Conditions.<br><br><br>
+
+<b>Governing Law</b><br><br><br>
+These Terms and Conditions shall be governed by and construed in accordance with the laws of Malaysia, without regard to its conflict of law provisions.<br><br><br>
+
+<b>Changes to These Terms</b><br><br><br>
+We reserve the right to update or modify these Terms and Conditions at any time without prior notice. Any changes will be effective immediately upon posting on our website. Your continued use of our website following the posting of changes constitutes your acceptance of such changes.<br><br><br>
+
+<b>Contact Us</b><br><br><br>
+If you have any questions or concerns about these Terms and Conditions, please contact us.<br><br><br>
+
+By using our website or services, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use our website or services.
+
   </p>
   </div>
 </section>
