--- a/pages/testimonies.html
+++ b/pages/testimonies.html
@@ -37,7 +37,7 @@
  
 <section id="testimonies" class="section">
   <div class="default-content">
-    <h3>What do customers say about our product?</h3>
+    <h3>What do customers say about our services?</h3>
 
 <div class="testimonial-container">
     <div class="customer-photo">
@@ -45,10 +45,10 @@
     </div>
     <div class="customer-review">
         <p>
-            "MNM is a game-changer! These little bites of heaven are the perfect combination of crunch and sweetness. I can't get enough of them!"
+            "Exceeded Our Expectations! Tahad Production surpassed all expectations! Their professionalism and creativity transformed our vision into an unforgettable event. We can't wait to work with them again!"
         </p>
         <p>
-            - Jannah
+            - Toyota Representive
         </p>
     </div>
 </div>
@@ -59,10 +59,10 @@
     </div>
     <div class="customer-review">
         <p>
-            "I'm officially addicted to MNM. They're the ultimate snack for satisfying my sweet tooth while still feeling guilt-free about my choice."
+            "Stress-Free Experience! Choosing Tahad Production was the best decision we made! Their expertise made the entire process stress-free, and the event was a resounding success thanks to their seamless coordination."
         </p>
         <p>
-            - Alia
+            - CEO Of ZXZ Sdn Bhd
         </p>
     </div>
 </div>
@@ -73,10 +73,10 @@
     </div>
     <div class="customer-review">
         <p>
-            "I've tried many similar products, but MNM stands out with its superior quality and flavor. It's like a party in my mouth with every bite!"
+            "Creative Genius! ahad Production's creativity knows no bounds! From themed decorations to interactive experiences, every detail was thoughtfully curated to wow our guests."
         </p>
         <p>
-            - Izz
+            - Marketing Manager Petronas
         </p>
     </div>
 </div>
@@ -87,10 +87,10 @@
     </div>
     <div class="customer-review">
         <p>
-            "MNMs are a must-have in my pantry. They're my secret weapon for beating afternoon cravings and keeping my energy levels up."
+            "Exceptional Service! Tahad Production delivers exceptional service! Their professionalism and commitment to client satisfaction are unmatched. We couldn't be happier with the results!"
         </p>
         <p>
-            - Bunga
+            - Chief Operation Oficer CVA Sdn Bhd
         </p>
     </div>
 </div>
@@ -101,10 +101,10 @@
     </div>
     <div class="customer-review">
         <p>
-            "As a busy mom, MNM has become a lifesaver. It's the ideal snack to toss in my bag for on-the-go munching, and my kids love them too!"
+            "Unforgettable Memories! Thanks to Tahad Production, our event was nothing short of spectacular! Their flawless execution left us with unforgettable memories and grateful for their expertise."
         </p>
         <p>
-            - Lily
+            - Head Of Marketing Hotlink
         </p>
     </div>
 </div>
@@ -138,8 +138,8 @@
           <h3>TAHAD PROD | MALAYSIA</h3>
       <ul>
       <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
-      <li><a href="tel:+601117035013" target="_blank">+601117035013</a></li>
-      <li><a href="mailto:hello.tahad@gmail.com" target="_blank">hello.tahad@gmail.com</a></li>
+      <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
+      <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
       </ul>
         </div>
   </section>
