--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -109,8 +109,8 @@ By using our website or services, you acknowledge that you have read, understood
           <h3>TAHAD PROD | MALAYSIA</h3>
       <ul>
       <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
-      <li><a href="tel:+601117035013" target="_blank">+601117035013</a></li>
-      <li><a href="mailto:hello.tahad@gmail.com" target="_blank">hello.tahad@gmail.com</a></li>
+      <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
+      <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
       </ul>
         </div>
   </section>
