--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
   <section id="about" class="section">
     <div class="section-content">
       <h2>About</h2>
-      <p style = "text-align: justify;">NMN (Nicotinamide Mononucleotide), a cutting-edge anti-aging compound. Explore the science behind NMN, its potential health benefits, dosage recommendations, and where to find quality NMN supplements. Stay informed about the latest research, testimonials, and expert insights on NMN's role in promoting longevity and well-being. Join a community of health-conscious individuals on their journey to better health through NMN supplementation.</p>
+      <p style = "text-align: justify; word-spacing: -1px;">NMN (Nicotinamide Mononucleotide), a cutting-edge anti-aging compound. Explore the science behind NMN, its potential health benefits, dosage recommendations, and where to find quality NMN supplements. Stay informed about the latest research, testimonials, and expert insights on NMN's role in promoting longevity and well-being. Join a community of health-conscious individuals on their journey to better health through NMN supplementation.</p>
     </div>
   </section>
   
