--- a/cards/nabil.html
+++ b/cards/nabil.html
@@ -21,7 +21,7 @@
 <!-- Hero Banner -->
 <div id="heroBanner">
     <!-- bgimage -->
-    <img src="../images/nabils.jpeg" alt="Hero Image">
+    <img src="../images/nabil.jpg" alt="Hero Image">
     <!-- Content -->
     <div class="content-wrapper">
             <!-- name -->
