--- a/pages/policies.html
+++ b/pages/policies.html
@@ -60,7 +60,7 @@ Our website and services are not directed to individuals under the age of 18. We
 We reserve the right to update or modify this Privacy Policy at any time. Any changes will be effective immediately upon posting on our website. We encourage you to review this Privacy Policy periodically for any updates.<br><br><br>
 
 <b>Terms of Service</b><br><br><br>
-If you have aContact Usny questions or concerns about our Privacy Policy or the handling of your personal information, please contact us.
+If you have any questions or concerns about our Privacy Policy or the handling of your personal information, please contact us.
 
   </p>
   </div>
