--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -75,7 +75,7 @@ These Terms and Conditions shall be governed by and construed in accordance with
 We reserve the right to update or modify these Terms and Conditions at any time without prior notice. Any changes will be effective immediately upon posting on our website. Your continued use of our website following the posting of changes constitutes your acceptance of such changes.<br><br><br>
 
 <b>Contact Us</b><br><br><br>
-If you have any questions or concerns about these Terms and Conditions, please contact us.<br><br><br>
+If you have any questions or concerns about these Terms and Conditions, please contact us.<br><br><br>s
 
 By using our website or services, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use our website or services.
 
