--- a/pages/testimonies.html
+++ b/pages/testimonies.html
@@ -112,37 +112,48 @@
 	</div>
 </section>
  
-    <section id="infos" class="section">
-    <div class="section-content-infos">
-      <div class="infos">
-        <div class="info">
-          <h3>ABOUT TAHAD</h3>
-          <ul>
-          <li><a href = "why.html">Why Choose Us</a></li>
-          <li><a href = "testimonies.html">Testimonials</a></li>
-      <li><a href="https://www.facebook.com/tahadprod" target = "_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/tahadprod" target = "_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@tahadprod" target = "_blank" class="youtube"><i class="fab fa-youtube"></i></a>
-          </ul>
-        </div>
-        <div class="info">
-          <h3>CUSTOMER SERVICE</h3>
-          <ul>
-          <li><a href = "faq.html">FAQs</a></li>
-          <li><a href = "shipping.html">Shipping & Deliveries</a></li>
-          <li><a href = "policies.html">Our Policies</a></li>
-          <li><a href = "tnc.html">Term & Conditions</a></li>
-          </ul>
-          </div>
-        <div class="info">
-          <h3>TAHAD PROD | MALAYSIA</h3>
-      <ul>
-      <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
-      <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
-      <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
-      </ul>
-        </div>
-  </section>
+<section id="infos" class="section">
+  <div class="section-content-infos">
+    <div class="infos">
+      <div class="info">
+        <h3>ABOUT TAHAD</h3>
+        <ul>
+          <li><a href="why.html">Why Choose Us</a></li>
+          <li><a href="testimonies.html">Testimonials</a></li>
+          <li>
+            <a href="https://www.facebook.com/tahadprod" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/tahadprod" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@tahadprod" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
+          </li>
+          <!-- Subscribe form and button -->
+          <li>
+          <form id="subscribe-form">
+        <input type="email" id="email" name="entry.649296648" placeholder="Enter your email" required>
+        <button type="submit" id="subscribe-btn">Subscribe</button>
+    </form>
+          </li>
+        </ul>
+      </div>
+      <div class="info">
+        <h3>CUSTOMER SERVICE</h3>
+        <ul>
+          <li><a href="faq.html">FAQs</a></li>
+          <li><a href="shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="policies.html">Our Policies</a></li>
+          <li><a href="tnc.html">Term & Conditions</a></li>
+        </ul>
+      </div>
+      <div class="info">
+        <h3>TAHAD PROD | MALAYSIA</h3>
+        <ul>
+          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
+          <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
+          <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
   
    <footer>
        <div class="footer">
@@ -153,6 +164,7 @@
 	  
 	    <script src="../js/extensionRemover.js" defer></script>
         <script src="../js/script.js" defer></script>
+        <script src="../js/subs.js" defer></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
         <script>
