--- a/pages/policies.html
+++ b/pages/policies.html
@@ -85,7 +85,7 @@ If you have any questions or concerns about our Privacy Policy or the handling o
           <!-- Subscribe form and button -->
           <li>
           <form id="subscribe-form">
-        <input type="email" id="email" name="entry.649296648" placeholder="Enter your email" required>
+        <input type="email" id="email" name="entry.649296648" placeholder="Your email?" required>
         <button type="submit" id="subscribe-btn">Subscribe</button>
     </form>
           </li>
