--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -99,7 +99,7 @@ By using our website or services, you acknowledge that you have read, understood
           <!-- Subscribe form and button -->
           <li>
           <form id="subscribe-form">
-        <input type="email" id="email" name="entry.649296648" placeholder="Enter your email" required>
+        <input type="email" id="email" name="entry.649296648" placeholder="Your email?" required>
         <button type="submit" id="subscribe-btn">Subscribe</button>
     </form>
           </li>
