--- a/main.html
+++ b/main.html
@@ -137,7 +137,7 @@
           <!-- Subscribe form and button -->
           <li>
           <form id="subscribe-form">
-        <input type="email" id="email" name="entry.649296648" placeholder="Enter your email" required>
+        <input type="email" id="email" name="entry.649296648" placeholder="Your email?" required>
         <button type="submit" id="subscribe-btn">Subscribe</button>
     </form>
           </li>
