--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -128,7 +128,7 @@ will be communicated to you via member’s portal<br><br>
           <!-- Subscribe form and button -->
           <li>
           <form id="subscribe-form">
-        <input type="email" id="email" name="entry.649296648" placeholder="Enter your email" required>
+        <input type="email" id="email" name="entry.649296648" placeholder="Your email?" required>
         <button type="submit" id="subscribe-btn">Subscribe</button>
     </form>
           </li>
