--- a/main.html
+++ b/main.html
@@ -40,14 +40,15 @@
  <section id="home" class="parallax" style="background-image: url('images/hero-images.jpeg');">
     <div class="overlay"></div>
     <div class="main-content">
-      <!-- Your content here -->
+      <h1>Welcome to TAHAD Production</h1><br><br>
+      <p>World leading Malaysian Based Company in Event Management<p>
     </div>
   </section>
   
   <section id="about" class="section">
     <div class="section-content">
       <h2>About</h2>
-      <p style = "text-align: justify; word-spacing: -1px;">NMN (Nicotinamide Mononucleotide), a cutting-edge anti-aging compound. Explore the science behind NMN, its potential health benefits, dosage recommendations, and where to find quality NMN supplements. Stay informed about the latest research, testimonials, and expert insights on NMN's role in promoting longevity and well-being. Join a community of health-conscious individuals on their journey to better health through NMN supplementation.</p>
+      <p style = "text-align: justify; word-spacing: -1px;">At Tahad Production (JM1000247-W), we believe that every event is an opportunity to create unforgettable memories. With a passion for creativity and an unwavering commitment to excellence, we specialize in crafting extraordinary experiences that leave a lasting impression. Our dedicated team of event professionals brings years of expertise to the table, ensuring that every detail is meticulously planned and executed to perfection. From intimate gatherings to grand celebrations, we thrive on transforming our clients' visions into reality. With Tahad Production, you can trust that your event is in capable hands, and we'll go above and beyond to make it an occasion to remember.</p>
     </div>
   </section>
   
