--- a/main.html
+++ b/main.html
@@ -40,8 +40,7 @@
  <section id="home" class="parallax" style="background-image: url('images/hero-images.jpeg');">
     <div class="overlay"></div>
     <div class="main-content">
-      <h1>Welcome to TAHAD Production</h1><br><br>
-      <p>World leading Malaysian Based Company in Event Management<p>
+      <!-- content -->
     </div>
   </section>
   
