--- a/main.html
+++ b/main.html
@@ -173,7 +173,8 @@
 	 <script src="js/extensionRemover.js" defer></script>
    <script src="js/script.js" defer></script>
 	 <script src="js/paralax.js" defer></script>
-   <script src="../js/subs.js" defer></script>
+   <script src="js/subs.js" defer></script>
+   <script src="js/herovids.js" defer></script>
    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
     <script>
