--- a/main.html
+++ b/main.html
@@ -55,13 +55,11 @@
   <div class="section-content">
     <h2>Services</h2>
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/e7CDgE9nWkE?mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&disablekb=1&iv_load_policy=3&loop=1&autoplay=1&vq=hd1080" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-JH8gDbRU8?mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&disablekb=1&iv_load_policy=3&autoplay=1&vq=hd1080&loop=1" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"></iframe>
       <div class="overlay"></div>
     </div>
   </div>
 </section>
-
-
   
   <section id="benefits" class="section">
     <div class="section-content">
@@ -155,9 +153,9 @@
       <div class="info">
         <h3>TAHAD PROD | MALAYSIA</h3>
         <ul>
-          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
-          <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
-          <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
+          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank"><i class="fas fa-map small"></i> 45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
+          <li><a href="tel:+601133211910" target="_blank"><i class="fas fa-phone small"></i> +601133211910</a></li>
+          <li><a href="mailto:tahadproduction@gmail.com" target="_blank"><i class="fas fa-envelope small"></i> tahadproduction@gmail.com</a></li>
         </ul>
       </div>
     </div>
