--- a/pages/testimonies.html
+++ b/pages/testimonies.html
@@ -146,9 +146,9 @@
       <div class="info">
         <h3>TAHAD PROD | MALAYSIA</h3>
         <ul>
-          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank">45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
-          <li><a href="tel:+601133211910" target="_blank">+601133211910</a></li>
-          <li><a href="mailto:tahadproduction@gmail.com" target="_blank">tahadproduction@gmail.com</a></li>
+          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank"><i class="fas fa-map small"></i> 45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
+          <li><a href="tel:+601133211910" target="_blank"><i class="fas fa-phone small"></i> +601133211910</a></li>
+          <li><a href="mailto:tahadproduction@gmail.com" target="_blank"><i class="fas fa-envelope small"></i> tahadproduction@gmail.com</a></li>
         </ul>
       </div>
     </div>
