--- a/pages/testimonies.html
+++ b/pages/testimonies.html
@@ -148,7 +148,7 @@
         <ul>
           <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank"><i class="fas fa-map small"></i> 45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
           <li><a href="tel:+601133211910" target="_blank"><i class="fas fa-phone small"></i> +601133211910</a></li>
-          <li><a href="mailto:tahadproduction@gmail.com" target="_blank"><i class="fas fa-envelope small"></i> tahadproduction@gmail.com</a></li>
+          <li><a href="mailto:hello@tahad.co" target="_blank"><i class="fas fa-envelope small"></i> hello@tahad.co</a></li>
         </ul>
       </div>
     </div>
