--- a/index.html
+++ b/index.html
@@ -1,166 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-      <meta http-equiv="Cache-Control" content="max-age=3600, public, stale-while-revalidate=604800">
-      <title>TAHAD - Malaysia Event Management</title>
-      <meta name="description" content="Loading screen for TAHAD the leading event management company in malaysia">
-      <link rel="canonical" href="https://www.tahad.co/" />
-      <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-      <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta http-equiv="Cache-Control" content="max-age=3600, public, stale-while-revalidate=604800">
+  <title>TAHAD - Malaysia Event Management</title>
+  <meta name="description" content="Experience limitless events with TAHAD, Malaysia's leading event organizers. Our passionate team delivers diverse and unforgettable experiences.">
+  <link rel="canonical" href="https://www.tahad.co/" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="css/root.css">
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/totop.css">
+  <link rel="stylesheet" href="css/footer.css">
 
-        :root {
-            --font-family: 'Montserrat', sans-serif;
-            --primary-color: #272626; /* lighter dark */
-            --secondary-color: #F9F4F4; /* light red */
-            --tertiary-color: #C7372F; /* apple red */
-            --essence-color: #0f0f0f; /* darker dark */
-        }
-
-        body {
-            background-color: var(--tertiary-color);
-            font-family: 'Montserrat', sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            transition: background-color 0.5s;
-            position: relative; /* Add this to establish a positioning context */
-        }
-
-        .logo {
-            position: fixed; /* Fix the logo to the top of the page */
-            top: 20px;
-            left: 0;
-            right: 0;
-            background-color: transparent; /* Background color for the logo container */
-            padding: 10px 0; /* Add padding to the logo container */
-            text-align: center;
-            z-index: 1000; /* Set a high z-index to ensure it's above other content */
-
-        }
-
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 1s ease-in-out forwards;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        .flip-card {
-            perspective: 1000px;
-        }
-
-        .flip-card-inner {
-            width: 400px;
-            height: 400px;
-            position: relative;
-            transform-style: preserve-3d;
-            transition: transform 0.5s;
-        }
-
-        .flip-card:hover .flip-card-inner {
-            transform: rotateY(180deg);
-        }
-
-        .flip-card-front,
-        .flip-card-back {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            backface-visibility: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: white;
-            background-color: transparent; /* Set background color to transparent */
-            transition: background-color 0.5s, color 0.5s;
-        }
-
-        .flip-card-back {
-            transform: rotateY(180deg);
-            background-color: transparent;
-            color: var(--tertiary-color);
-        }
-
-        /* Add this style to make the text bold */
-        .flip-card-front p {
-            font-weight: bold;
-            font-size: 28px;
-        }
-
-        /* Style for the countdown text */
-        #countdown {
-            font-weight: bold;
-            font-size: 28px;
-        }
-    </style>
 </head>
-<body>
-    <!-- Logo container -->
-    <div class="logo">
-        <a href = "main.html"><img src="images/logo.png" alt="Your Logo" width="100"></a>
-    </div>
 
-    <div class="fade-in flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
-                <p>Work In Progress ..</p>
-            </div>
-            <div class="flip-card-back">
-                <div id="countdown"></div>
-            </div>
+<body id='main'>
+  <header>
+  <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#about">About</a>
+  <a href="#highlight">Highlight</a>
+  <a href="#benefits">Benefits</a>
+  <a href="#team">Team</a>
+</div>
+
+<span class="menuIcon" onclick="openNav()">&#9776;</span>
+
+  <img src="images/logo.svg" alt="Default Logo" id="default-logo">
+  <img src="images/logo2.svg" alt="Scrolled Logo" id="scrolled-logo" class="hidden">
+  
+  </header>
+  
+ <section id="home" class="parallax" style="background-image: url('images/hero-images.jpeg');">
+    <div class="overlay"></div>
+    <div class="main-content">
+      <!-- content -->
+    </div>
+  </section>
+  
+  <section id="about" class="section">
+    <div class="section-content">
+      <h2>About</h2>
+      <p style = "text-align: justify; word-spacing: -1px;">At Tahad Production (JM1000247-W), we believe that every event is an opportunity to create unforgettable memories. With a passion for creativity and an unwavering commitment to excellence, we specialize in crafting extraordinary experiences that leave a lasting impression. Our dedicated team of event professionals brings years of expertise to the table, ensuring that every detail is meticulously planned and executed to perfection. From intimate gatherings to grand celebrations, we thrive on transforming our clients' visions into reality. With Tahad Production, you can trust that your event is in capable hands, and we'll go above and beyond to make it an occasion to remember.</p>
+    </div>
+  </section>
+  
+  <section id="highlight" class="section">
+  <div class="section-content">
+    <h2>Services</h2>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-JH8gDbRU8?mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&disablekb=1&iv_load_policy=3&autoplay=1&vq=hd1080&loop=1" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+      <div class="overlay"></div>
+    </div>
+  </div>
+</section>
+  
+  <section id="benefits" class="section">
+    <div class="section-content">
+      <div class="benefits">
+        <div class="benefit">
+		<div class ="image-container">
+          <img src="images/event1.svg" alt="Benefit 1" class="rotate-on-hover">
+		  </div>
+          <h3>Corporate Events</h3>
+		  <p>We specialize in planning corporate events like conferences and product launches, ensuring every detail meets your objectives and impresses attendees.</p>
         </div>
+        <div class="benefit">
+		<div class ="image-container">
+          <img src="images/event2.svg" alt="Benefit 2" class="rotate-on-hover">
+		  </div>
+          <h3>Social Events</h3>
+          <p>We creates unforgettable social events, from weddings to birthday parties, with creative flair and meticulous planning.</p>
+        </div>
+        <div class="benefit">
+		<div class ="image-container">
+          <img src="images/event3.svg" alt="Benefit 3" class="rotate-on-hover">
+		  </div>
+          <h3>Non-Profit Events</h3>
+          <p>We support non-profits in hosting successful fundraisers and galas, maximizing impact while staying within budget.</p>
+        </div>
+		<div class="benefit">
+		<div class ="image-container">
+          <img src="images/event4.svg" alt="Benefit 4" class="rotate-on-hover">
+		  </div>
+          <h3>Virtual and Hybrid Events</h3>
+          <p>We excels in planning engaging virtual and hybrid events, connecting attendees worldwide with interactive experiences.</p>
+        </div>
+      </div>
     </div>
-    
+  </section>
+  
+  <!-- <section id="team" class="section">
+    <div class="section-content">
+      <h2>Our Team</h2>
+      <div class="team-members">
+        <div class="team-member">
+          <img src="images/team-member-1.jpg" alt="Team Member 1">
+          <h3>XXX</h3>
+          <p>Founder</p>
+        </div>
+        <div class="team-member">
+          <img src="images/team-member-2.jpg" alt="Team Member 2">
+          <h3>XXX</h3>
+          <p>Marketing</p>
+        </div>
+        <div class="team-member">
+          <img src="images/team-member-3.jpg" alt="Team Member 3">
+          <h3>XXX</h3>
+          <p>Creative</p>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  
+<section id="infos" class="section">
+  <div class="section-content-infos">
+    <div class="infos">
+      <div class="info">
+        <h3>ABOUT TAHAD</h3>
+        <ul>
+          <li><a href="pages/why.html">Why Choose Us</a></li>
+          <li><a href="pages/testimonies.html">Testimonials</a></li>
+          <li>
+            <a href="https://www.facebook.com/tahadprod" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/tahadprod" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@tahadprod" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
+          </li>
+          <!-- Subscribe form and button -->
+          <li>
+          <form id="subscribe-form">
+        <input type="email" id="email" name="entry.649296648" placeholder="Your email?" required>
+        <button type="submit" id="subscribe-btn">Subscribe</button>
+    </form>
+          </li>
+        </ul>
+      </div>
+      <div class="info">
+        <h3>CUSTOMER SERVICE</h3>
+        <ul>
+          <li><a href="pages/faq.html">FAQs</a></li>
+          <li><a href="pages/shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="pages/policies.html">Our Policies</a></li>
+          <li><a href="pages/tnc.html">Term & Conditions</a></li>
+        </ul>
+      </div>
+      <div class="info">
+        <h3>TAHAD PROD | MALAYSIA</h3>
+        <ul>
+          <li><a href="https://maps.app.goo.gl/LA6sjDHbmGGRY3gH8" target="_blank"><!--<i class="fas fa-map small"></i> -->45th Floor Petronas Twin Tower, <br> Tower B, North Wing, <br> 50088 Kuala Lumpur, Malaysia</a></li>
+          <li><a href="tel:+601133211910" target="_blank"><!--<i class="fas fa-phone small"></i> -->+601133211910</a></li>
+          <li><a href="mailto:hello@tahad.co" target="_blank"><!--<<i class="fas fa-envelope small"></i> -->hello@tahad.co</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+  
+   <footer>
+       <div class="footer"></div>
+    </footer>
+	
+	  <button id="toTopBtn" onclick="scrollToTop()"> <span>&#9650;</span></button>
+	  
+	 <script src="js/extensionRemover.js" defer></script>
+   <script src="js/script.js" defer></script>
+	 <script src="js/paralax.js" defer></script>
+   <script src="js/subs.js" defer></script>
+   <script src="js/herovids.js" defer></script>
+   <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
     <script>
-        // Set the date we're counting down to
-        const countdownDate = new Date('March 31, 2024 00:00:00').getTime();
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        // Update the countdown every 1 second
-        const countdownInterval = setInterval(function() {
-            const now = new Date().getTime();
-            const distance = countdownDate - now;
-
-            if (distance < 0) {
-                clearInterval(countdownInterval);
-                document.getElementById('countdown').innerHTML = 'EXPIRED';
-            } else {
-                const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                document.getElementById('countdown').innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
-            }
-        }, 1000);
-        
-        // Change background color when the card flips
-        const flipCard = document.querySelector('.flip-card');
-        flipCard.addEventListener('mouseenter', function() {
-            document.body.style.backgroundColor = 'var(--secondary-color)';
-        });
-        flipCard.addEventListener('mouseleave', function() {
-            document.body.style.backgroundColor = 'var(--tertiary-color)';
-        });
-
-        // Remove the fade-in class after a delay
-        setTimeout(() => {
-            document.querySelector('.fade-in').classList.remove('fade-in');
-        }, 2000); // Adjust the delay as needed
+      gtag('config', 'G-LP47NM0ZEJ');
     </script>
+
 </body>
+
 </html>
