--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<div class ="image-container">
           <img src="images/event4.svg" alt="Benefit 4" class="rotate-on-hover">
 		  </div>
-          <h3>Virtual and Hybrid Events</h3>
+          <h3>Virtual & Hybrid Events</h3>
           <p>We excels in planning engaging virtual and hybrid events, connecting attendees worldwide with interactive experiences.</p>
         </div>
       </div>
@@ -172,7 +172,6 @@
    <script src="js/script.js" defer></script>
 	 <script src="js/paralax.js" defer></script>
    <script src="js/subs.js" defer></script>
-   <script src="js/herovids.js" defer></script>
    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
     <script>
