--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#about">About</a>
-  <a href="#highlight">Highlight</a>
-  <a href="#benefits">Benefits</a>
-  <a href="#team">Team</a>
+  <a href="#highlight">Our Work</a>
+  <a href="#benefits">Services</a>
+  <!-- <a href="#team">Team</a> -->
 </div>
 
 <span class="menuIcon" onclick="openNav()">&#9776;</span>
@@ -47,13 +47,13 @@
   <section id="about" class="section">
     <div class="section-content">
       <h2>About</h2>
-      <p style = "text-align: justify; word-spacing: -1px;">At Tahad Production (JM1000247-W), we believe that every event is an opportunity to create unforgettable memories. With a passion for creativity and an unwavering commitment to excellence, we specialize in crafting extraordinary experiences that leave a lasting impression. Our dedicated team of event professionals brings years of expertise to the table, ensuring that every detail is meticulously planned and executed to perfection. From intimate gatherings to grand celebrations, we thrive on transforming our clients' visions into reality. With Tahad Production, you can trust that your event is in capable hands, and we'll go above and beyond to make it an occasion to remember.</p>
+      <p style = "text-align: justify; word-spacing: -1px;">At Tahad Production, we're more than just event planners – we're memory-makers. With a zest for creativity and an unwavering commitment to excellence, we specialize in curating extraordinary experiences that leave a lasting impact. Our dynamic team of event professionals brings a wealth of expertise to the table, ensuring every detail is meticulously planned and flawlessly executed. From intimate soirées to grand affairs, we thrive on turning your dreams into reality. <br><br>With Tahad Production, your event isn't just an occasion – it's a journey filled with unforgettable moments waiting to be crafted.</p>
     </div>
   </section>
   
   <section id="highlight" class="section">
   <div class="section-content">
-    <h2>Services</h2>
+    <h2>Our Work</h2>
     <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-JH8gDbRU8?mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&disablekb=1&iv_load_policy=3&autoplay=1&vq=hd1080&loop=1" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"></iframe>
       <div class="overlay"></div>
@@ -63,6 +63,8 @@
   
   <section id="benefits" class="section">
     <div class="section-content">
+      <h2>Services</h2>
+      <h3>Best Solutions for Your Needs</h3><br>
       <div class="benefits">
         <div class="benefit">
 		<div class ="image-container">
