--- a/pages/faq.html
+++ b/pages/faq.html
@@ -38,21 +38,22 @@
   <div class="faq-content">
     <h3>Frequently Asked Questions</h3>
     <button class="accordion">
-        Who do I contact ? <span class="icon"></span>
+       How can I get a consultation ? <span class="icon"></span>
     </button>
     <div class="panel">
-      <p>You may contact our Customer Service Team through:</p>
+      <p>Drop us an e-mail or Whatsapp us anytime of the day</p>
       <ul>
-        <li>Phone : <a href="tel:+601133211910">+601133211910</a></li>
-        <li>Email : <a href="mailto:tahadproduction@gmail.com">tahadproduction@gmail.com</a></li>
+        <li>Phone : <a href="https://wa.me/601133211910">+601133211910</a></li>
+        <li>Email : <a href="mailto:hello@tahad.co">hello@tahad.co</a></li>
       </ul>
+      <p>We are always up for a meaningful Discovery Session where we explore the wildest ideas and concepts for your event!</p>
     </div>
 	
 	<button class="accordion">
        Who are we ? <span class="icon"></span>
     </button>
     <div class="panel">
-      <br> <p><b>TAHAD Production (JM1000247-W)</b> is a event organizer company in Malaysia. The core team comprises 3 industry veterans with over 8 years of experiences in 3 different area of expertise. The core team of TAHAD Production excell in organizing event in various industry and category ie: business event, social event, destination event, and etc. We understand that every business require unique and different approach, that where we ensure that every event is customized to help your company archieve and connect with audience effectively. </p>
+      <br> <p>Tahad Production (JM1000247-W), we're your partners in crafting unforgettable experiences. Specializing in corporate events, social gatherings, non-profit fundraisers, and virtual/hybrid events, we bring creativity, attention to detail, and dedication to every project. Whether it's a conference, wedding, fundraiser, or virtual conference, we handle every aspect from planning to execution, ensuring your event exceeds expectations. Let us take the stress out of event planning and make your next occasion truly extraordinary.</p>
       <br>
     </div>
 	
@@ -74,6 +75,22 @@
     </button>
     <div class="panel">
       <br> <p>We have collaborated with companies across Malaysia, mainly in Kuala Lumpur, Selangor, Puchong, Subang Jaya, Shah Alam, Johor Bahru and Penang.<br><br>To find out more, feel free to contact us directly. </p>
+      <br>
+    </div>
+
+    <button class="accordion">
+       Safety measure ? <span class="icon"></span>
+    </button>
+    <div class="panel">
+      <br> <p>Yes, Tahad Production offers comprehensive event planning and coordination services, including venue selection, vendor coordination, budget management, and logistics planning. We handle every aspect of event planning to ensure a seamless and stress-free experience for our clients.</p>
+      <br>
+    </div>
+
+    <button class="accordion">
+       Assist with event logistics ? <span class="icon"></span>
+    </button>
+    <div class="panel">
+      <br> <p>Tahad Production prioritizes the safety and well-being of our clients and attendees. We adhere to local health and safety guidelines and implement appropriate measures such as social distancing, sanitization protocols, and crowd management to ensure a safe event environment. </p>
       <br>
     </div>
 	
