--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta http-equiv="Cache-Control" content="max-age=3600, public, stale-while-revalidate=604800">
-  <title>TAHAD - Shipping</title>
-  <meta name="description" content="Our shipping page details our efficient shipping process and policies.It ensures transparency and reliability for our customers, delivering a seamless experience from checkout to delivery.">
+  <title>TAHAD - Service, Cancellation & Refund Policies</title>
+  <meta name="description" content="Explore Tahad Production's tailored event management services, flexible refund options, and cancellation process.">
   <link rel="canonical" href="https://tahad.github.io/pages/testimonies" />
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
@@ -36,76 +36,24 @@
  
 <section id="shipping" class="section">
   <div class="default-content">
-    <h3>Shipping, Cancellation, And Refund Policy</h3>
+    <h3>Service, Cancellation, And Refund Policy</h3>
 	 <p>
-<b>CANCELLATION PRIOR TO SHIPMENT</b> <br><br>
-If you cancel your order(s) before it ships from our warehouse, you will not be charged any additional
-fees. We require a cancellation request to be submitted by emailing us at support@ellenur.com
-Once the cancellation request is received, a full refund will be initiated. We would advise a
-cancellation request within 12 hours upon your order submission for a cancellation prior to goods
-shipment.<br><br>
+<b>Service Policy</b> <br><br>
+At Tahad Production (JM1000247-W), we are committed to providing exceptional event management services tailored to meet your specific needs and exceed your expectations. Our dedicated team of professionals works tirelessly to ensure that every aspect of your event is meticulously planned and executed to perfection. From initial consultation to post-event follow-up, we strive to deliver a seamless and unforgettable experience for you and your guests.<br><br>
 
-<b>RETURN POLICY</b><br><br>
-The following are the policies to be eligible for return requests after shipment/ receipt of goods:
-You are responsible for the cost and risk of returning the goods to us. You should send to our following
-address:<br><br>
-ELLENUR SDN BHD | MALAYSIA <br><br>
-Business adress : 45th Floor Petronas Twin Tower, Tower B, North Wing, 50088 Kuala Lumpur, Malaysia <br><br>
-Contact : +60123456789 (Warehouse & Logistic)<br><br>
-Only items that have been purchased directly from ELLENUR SDN. BHD. can be eligible for a return. <br><br>
-Any ELLENUR SDN. BHD. product purchased through other retailers are not eligible for this policy and
-must be in accordance to the respective retailers’ returns and refunds policy.<br><br>
-Goods are eligible for a return if the following are applied:<br><br>
-Incorrect : <br>
-The item is not the item you ordered. Wrong size or the colour is different from what is indicated on
-the order summary, or there are missing items inside the packaging.<br><br>
-Damaged : <br>
-The items are found to be damaged upon receipt. Items has been tampered/refurbished or modified.
-Customers will be responsible for all shipping charges to return goods. Returns are applicable only for
-a complete ELLENUR SDN. BHD. product. <br><br>
-Returned items must meet the following requirements:<br>
+<b>Refund Policy</b><br><br>
+We understand that circumstances may arise that require the cancellation or modification of your event. In such cases, Tahad Production offers a flexible refund policy based on the following guidelines:<br><br>
 <ul>
-<li>The item must be shipped back to us within 7 working days upon receipt. (as proved by the postal or courier receipt).</li>
-<li>You have proof of purchase (order invoice number and receipt).</li>
-<li>Item must be in new condition and returned in its original packaging and free gifts received with it. All packaging must be unused, unmarked and not defaced in any manner.</li>
-<li>Item must be returned in the original box (or with, at least, suitable packaging) to protect the Product from damage during return delivered.</li>
-</ul>  <br><br>
-Change of order and cancellation of order will not be permitted once payment has been confirmed. Any
-cancellations due to a change of mind will not be accepted. <br><br>
-We reserve the right to reject any cancellation, refund that deemed unfit or unreasonable.<br><br>
-
-<b>REFUND POLICY</b><br><br>
-Your full refund will be issued once we have received and examined the returned goods at our return
-center. Once the returned goods fulfil our return policy, the full refund will be initiated. The method of
-refund will be processed depending on your original payment method:<br><br>
-<ul>
-<li>Online Bank Transfer, full refunds will be credited into your bank account via online banktransfer, which should be posted within 5-7 working days.</li>
-<li>Credit card refunds services, refunds will be sent to the card-issuing bank.</li>
-</ul> <br><br>
-Kindly contact your card-issuing bank with regards to the duration of the credit refunds.<br><br>
+<li>Full Refund: If the cancellation request is made at least [XX] days prior to the scheduled event date, we will provide a full refund of any payments made.</li>
+<li>Partial Refund: If the cancellation request is made within [XX] days of the scheduled event date, a partial refund may be provided, taking into consideration any expenses or commitments already incurred by Tahad Production.</li>
+<li>No Refund: Cancellation requests received less than [XX] days before the scheduled event date may not be eligible for a refund, as significant resources and planning efforts may have already been allocated.</li>
+</ul><br><br>
+Please note that any refunds are subject to review and approval by Tahad Production, and additional terms and conditions may apply based on the specific circumstances of each event.<br><br>
 
 
-<b>SHIPPING POLICY</b><br><br>
-Shipping Address<br>
-We will only ship to addresses provided in the billing address or shipment address provided during your
-purchase.<br><br>
-Please ensure correct addresses and reachable phone number are provided when completing your
-order. We do not ship to P.O Boxes (Post-Office Box) and only to valid legitimate shipping addresses.<br><br>
-We will not be liable in the event of an incorrect shipping address is provided and goods are returned to
-us.<br><br>
-All re-delivery of goods to you will be charged for a associated shipping charges which will be disclosed
-upon request for a second delivery attempt.<br><br>
-Change In Shipping Address<br>
-If you have any request for change of shipping address, please email us at support@vivarix.com within
-12 hours upon your order submission. <br>
-If request of change in shipping address is made after 24 hours upon order confirmation, customers will
-be responsible for any associated shipping charges.<br><br>
-Shipping Time <br>
-It typically takes between 2-5 working days (Monday to Friday) for goods to arrive at your destination.
-The shipment will be delivered during office hours between 9:00 am to 5:00 pm weekdays only. <br><br>
-Tracking Number<br>
-Once goods leave our warehouse and picked up by our shipping partner, the tracking ID for the package
-will be communicated to you via member’s portal<br><br>
+<b>Cancellation Policy</b><br><br>
+In the event that you need to cancel or reschedule your event, please notify Tahad Production as soon as possible to discuss your options. Cancellation requests can be made by contacting our team directly via phone or email. We understand that unforeseen circumstances may arise, and we will work with you to accommodate any necessary changes to your event plans.<br><br>
+It's important to review and understand our refund and cancellation policies before booking our services. If you have any questions or concerns regarding these policies, please don't hesitate to reach out to us. We're here to assist you every step of the way and ensure that your event planning experience with Tahad Production is stress-free and enjoyable.<br><br>
 
   </p>
   </div>
