--- a/cards/eezaq.html
+++ b/cards/eezaq.html
@@ -36,7 +36,7 @@
     <div class="contact-buttons">
         <a href="tel:+601116817100" class="phone"><i class="fas fa-phone"></i></a>
         <a href="https://wa.me/601116817100" class="whatsapp bigger"><i class="fab fa-whatsapp"></i></a>
-        <a href="mailto:eezaqazmir90@gmail.com" class="email bigger"><i class="far fa-envelope"></i></a>
+        <a href="mailto:eezaq@tahad.co" class="email bigger"><i class="far fa-envelope"></i></a>
         <a href="eezaq.vcf" download="eezaq azmir.vcf"><i class="fas fa-download"></i></a>
     </div>
     <div class="other-buttons">
