--- a/cards/nabil.html
+++ b/cards/nabil.html
@@ -36,7 +36,7 @@
     <div class="contact-buttons">
         <a href="tel:+601133211910" class="phone"><i class="fas fa-phone"></i></a>
         <a href="https://wa.me/601133211910" class="whatsapp bigger"><i class="fab fa-whatsapp"></i></a>
-        <a href="mailto:nabilsuhaimi02@gmail.com" class="email bigger"><i class="far fa-envelope"></i></a>
+        <a href="mailto:nabil@tahad.co" class="email bigger"><i class="far fa-envelope"></i></a>
         <a href="nabil.vcf" download="nabil suhaimi.vcf"><i class="fas fa-download"></i></a>
     </div>
     <div class="other-buttons">
