--- a/cards/umar.html
+++ b/cards/umar.html
@@ -36,7 +36,7 @@
     <div class="contact-buttons">
         <a href="tel:+601117035013" class="phone"><i class="fas fa-phone"></i></a>
         <a href="https://wa.me/601117035013" class="whatsapp bigger"><i class="fab fa-whatsapp"></i></a>
-        <a href="mailto:umar.tahad@gmail.com" class="email bigger"><i class="far fa-envelope"></i></a>
+        <a href="mailto:umar@tahad.co" class="email bigger"><i class="far fa-envelope"></i></a>
         <a href="umar.vcf" download="umarulharry.vcf"><i class="fas fa-download"></i></a>
     </div>
     <div class="other-buttons">
